# SquirrelConquest

./: .gitignore  .gitmodules  README.md  cabal.project
compiler/: build.bat  example.code  font.code  game.code  langjam.cabal  langjam.hs
html/: chip8-minimal.html  chip8.js  chip8.wasm  index.html
html/GAMES/: CUBE8.ch8
lib/: build_SDL.bat
lib/install_release/lib/: SDL2.lib  SDL2_test.lib  SDL2main.lib
prototype/: .gitignore  combine.bat  combine.py  thats_nuts_prototype.gmk
prototype/thats_nuts_prototype.gmx/: thats_nuts_prototype.project.gmx
prototype/thats_nuts_prototype.gmx/Configs/: Default.config.gmx
prototype/thats_nuts_prototype.gmx/objects/: obj_eagle.object.gmx  obj_level.object.gmx  obj_levelgen.object.gmx  obj_nut.object.gmx  obj_rattlesnake.object.gmx  obj_squirrel.object.gmx
prototype/thats_nuts_prototype.gmx/rooms/: rm_game.room.gmx
prototype/thats_nuts_prototype.gmx/scripts/: acorn_create.gml  acorn_destroy.gml  acorn_throw.gml  damage_player.gml  enemy_destroy.gml  game_over.gml  get_tile.gml  is_occupied.gml  move_idle.gml  move_player.gml  move_to_player.gml  random_pos_away_from_player.gml  scr_enemy_init.gml  scr_level_draw.gml  scr_level_init.gml  scr_level_step.gml  scr_levelgen_init.gml  scr_nut_init.gml  scr_player_draw.gml  scr_player_draw_gui.gml  scr_player_init.gml  scr_player_step.gml  set_tile.gml  spawn_eagles.gml  spawn_rattlesnakes.gml
prototype/thats_nuts_prototype.gmx/sprites/: spr_branch.sprite.gmx  spr_buried_nut.sprite.gmx  spr_nut.sprite.gmx  (+4 more)
src/: getopt_wrapper.h
src/Windows/: .gitignore  buildRelease.bat
(+17 files in other folders)
