cabal-version:       >=1.10
name:                langjam
version:             0.1.0.0
build-type:          Simple
executable langjam
  main-is:             langjam.hs
  build-depends:       base, megaparsec, containers, text, mtl, uuid, MonadRandom, deepseq, tardis, transformers
  default-language:    Haskell2010
